--- a/src/sass/_logement.scss
+++ b/src/sass/_logement.scss
@@ -47,7 +47,7 @@
 }
 
 .logement-host-name-picture {
-  width: 160px;
+  width: 172px;
   display: flex;
   flex-direction: row;  
   align-items: center;
@@ -66,6 +66,10 @@
   color: #FF6060;
   width: auto;
   text-align: right;
+}
+
+.equipments-list {
+  list-style-type: none;
 }
 
 .logement-rating {
@@ -95,7 +99,7 @@
 
 }
 
-@media screen and (280px <= width <= 375px) {
+@media screen and (335px <= width <= 375px) {
   .container-logement {
     margin-top: 0;
   }
@@ -119,7 +123,7 @@
 
     h2 {
       margin-top: 5px;
-    font-size: 14px;
+      font-size: 14px;
     }
 
   }
@@ -133,6 +137,8 @@
   }
 
   .tag {
+    display: flex;
+    flex-wrap: wrap;
     height: auto;
     margin-top: 10px;
   }
@@ -167,7 +173,7 @@
     flex-direction: column;
     width: 100%;
     margin: 0;
-    margin-bottom: 134px;
+    margin-bottom: 145px;
     .collapse-container {
       width: 92.5%;
       margin: 0;
@@ -349,9 +355,9 @@
 
   .logement-collapse {
     flex-direction: column;
-    width: 100%;
+    width: 97%;
     margin: 0;
-    margin-bottom: 120px;
+    margin-bottom: 133px;
     .collapse-container {
       width: 96.5%;
       margin: 0;
@@ -440,9 +446,10 @@
 
   .logement-collapse {
     flex-direction: column;
-    width: 100%;
+    width: 98%;
     margin: 0;
-    margin-bottom: 148px;
+    margin-bottom: 133px;
+
     .collapse-container {
       width: 96.5%;
       margin: 0;
