--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -337,7 +337,7 @@ body {
   width: 100%;
 }
 
-@media screen and (280px <= width <= 400px) {
+@media screen and (335px <= width <= 400px) {
   .images_gallery {
     background-color: #ffffff;
     margin: 0 20px;
@@ -349,7 +349,7 @@ body {
     margin: 10px;
   }
 }
-@media screen and (401px <= width <= 768px) {
+@media screen and (401px <= width <= 779px) {
   .images_gallery {
     background-color: #ffffff;
     margin-top: 10px;
@@ -361,7 +361,7 @@ body {
     margin: 10px 20px;
   }
 }
-@media screen and (769px <= width <= 992px) {
+@media screen and (779px <= width <= 992px) {
   .images_gallery {
     margin: 0 20px;
     margin-top: 20px;
@@ -418,7 +418,7 @@ body {
 }
 
 .logement-host-name-picture {
-  width: 160px;
+  width: 172px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -437,6 +437,10 @@ body {
   color: #FF6060;
   width: auto;
   text-align: right;
+}
+
+.equipments-list {
+  list-style-type: none;
 }
 
 .logement-rating {
@@ -463,7 +467,7 @@ body {
   width: 557px;
 }
 
-@media screen and (280px <= width <= 375px) {
+@media screen and (335px <= width <= 375px) {
   .container-logement {
     margin-top: 0;
   }
@@ -492,6 +496,8 @@ body {
     align-items: center;
   }
   .tag {
+    display: flex;
+    flex-wrap: wrap;
     height: auto;
     margin-top: 10px;
   }
@@ -520,7 +526,7 @@ body {
     flex-direction: column;
     width: 100%;
     margin: 0;
-    margin-bottom: 134px;
+    margin-bottom: 145px;
   }
   .logement-collapse .collapse-container {
     width: 92.5%;
@@ -664,9 +670,9 @@ body {
   }
   .logement-collapse {
     flex-direction: column;
-    width: 100%;
+    width: 97%;
     margin: 0;
-    margin-bottom: 120px;
+    margin-bottom: 133px;
   }
   .logement-collapse .collapse-container {
     width: 96.5%;
@@ -737,9 +743,9 @@ body {
   }
   .logement-collapse {
     flex-direction: column;
-    width: 100%;
+    width: 98%;
     margin: 0;
-    margin-bottom: 148px;
+    margin-bottom: 133px;
   }
   .logement-collapse .collapse-container {
     width: 96.5%;
